--- a/.npmignore
+++ b/.npmignore
@@ -8,4 +8,10 @@ node_modules
 # Runtime data
 tmp
 
-
+# Examples (If applicable to your project)
+example/
+.github/
+.gitignore
+babel.config.js
+yarn.lock
+package-lock.json
